<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_PositionState" Id="{580eeee3-6c52-42e6-b317-6ce95975b196}">
    <Declaration><![CDATA[TYPE E_PositionState :
(
RETRACTED	:= 0,
INSERTED	:= 1,
MOVING	:= 2,
INVALID :=3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>